# olio-ohjelmointi-viikkotehtavat

./: CMakeLists.txt  game.cpp  game.h  main.cpp
olio-ohjelmoint-viikkotehtava3/: CMakeLists.txt
olio-ohjelmointi-viikkotehtava5/: CMakeLists.txt  main.cpp
olio-ohjelmointi-viikkotehtavaa1/: CMakeLists.txt  main.cpp
